--- a/instapark.html
+++ b/instapark.html
@@ -369,5 +369,92 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <article class="nobottompadding">
+          <section>
+            <h3>Final design</h3>
+            <p>Armed with the interaction map, I took it to the next level by converting them to Hi-fidelity prototypes using Sketch and Principle to illustrate how some common scenarios would work in this application</p>
+          </section>
+        </article>
+      </div>
+    </div>
+    <div class="container-fluid showcase">
+      <div class="row">
+        <div class="col-md-6 bottompadding">
+          <div class="card card-elt"><a href="img/w_instapark/f3_launch.gif" target="_blank"><img class="img-responsive" src="img/w_instapark/f3_launch.gif" title="Click to see enlarged image"/></a>
+            <div class="container-fluid">
+              <div class="row" style="text-align:center">
+                <h3 class="h3tufte">User greeted with a delightful launch screen</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 bottompadding">
+          <div class="card card-elt"><a href="img/w_instapark/Final.gif" target="_blank"><img class="img-responsive" src="img/w_instapark/Final.gif" title="Click to see enlarged image"/></a>
+            <div class="container-fluid">
+              <div class="row" style="text-align:center">
+                <h3 class="h3tufte">Buyer requesting parking from seller</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 bottompadding">
+          <div class="card card-elt"><a href="img/w_instapark/f1_seller_gets_request.gif" target="_blank"><img class="img-responsive" src="img/w_instapark/f1_seller_gets_request.gif" title="Click to see enlarged image"/></a>
+            <div class="container-fluid">
+              <div class="row" style="text-align:center">
+                <h3 class="h3tufte">Seller sees a parking request notification and responds</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 bottompadding">
+          <div class="card card-elt"><a href="img/w_instapark/f2_wants_stats_to_set_price.gif" target="_blank"><img class="img-responsive" src="img/w_instapark/f2_wants_stats_to_set_price.gif" title="Click to see enlarged image"/></a>
+            <div class="container-fluid">
+              <div class="row" style="text-align:center">
+                <h3 class="h3tufte">Seller utilizes stats provided by Instapark to set a good price</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <article class="nobottompadding">
+          <section>
+            <h3>Development setup</h3>
+            <p>I used Sketch and Principle for making the wireframes and hi-fidelity prototypes. Here's a screenshot of my development environment</p>
+          </section>
+        </article>
+      </div>
+    </div>
+    <div class="container-fluid showcase">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card card-elt"><a href="img/w_instapark/sketch.png" target="_blank"><img class="img-responsive" src="img/w_instapark/sketch.png" title="Click to see enlarged image"/></a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card card-elt"><a href="img/w_instapark/principle.png" target="_blank"><img class="img-responsive" src="img/w_instapark/principle.png" title="Click to see enlarged image"/></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <article class="nobottompadding">
+          <section>
+            <h3>Impact</h3>
+            <p>The hi-fidelity prototypes were well received by student participants. They really liked the P2P parking idea and the fact that they were provided suggestions for determining parking price. </p>
+            <p>We then discussed about getting this implemented. I had researched earlier about the ParkWhiz API which would allow us to get the MVP1 for thiis app quickly implemented. Due to my commitments to other projects, I could not focus on developing an MVP1 app. I hope to do that soon though!</p>
+            <h3>Learnings</h3>
+            <p>This project had many firsts. This was my first large interaction design project. I learnt a lot about applying UX design process when building a product. I learnt that when building new products, when requirements are unclear, we need to be heavily grounded in research, listen carefully to our customers and adjust our course based on that. We should adopt a UX process that allows us to remain lean and agile and pivot quickly based on customers and so that we can quickly test our ideas with customers. I learnt the value of different UX design techniques like paper prototypes, wireframes, story boarding and hi-fidelity prototypes and when/when not to use them. Overall, this project was a great learning experience.</p>
+          </section>
+        </article>
+      </div>
+    </div>
   </body>
 </html>
